--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "resolveJsonModule": true,
     "skipDefaultLibCheck": true,
     "skipLibCheck": true,
-    "types": ["node"]
+    "types": ["node"],
+    "outFile": "./dist/out.js"
   },
   "exclude": [
     "**/dist/**",
