--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,9 @@
     "skipDefaultLibCheck": true,
     "skipLibCheck": true,
     "types": ["node"],
-    "outFile": "./dist/out.js"
+    "outDir": "./dist"
   },
+  "include": ["./src"],
   "exclude": [
     "**/dist/**",
     "**/node_modules/**"
